fix overflow on Update proposal status modal

--- a/packages/commonwealth/client/styles/modals/update_proposal_status_modal.scss
+++ b/packages/commonwealth/client/styles/modals/update_proposal_status_modal.scss
@@ -7,4 +7,8 @@
   @include smallInclusive {
     width: 100%;
   }
+
+  .CWModalBody {
+    overflow: unset;
+  }
 }
